--- a/app/views/deposits/index.html.erb
+++ b/app/views/deposits/index.html.erb
@@ -1,30 +1,34 @@
 <%- model_class = Deposit -%>
+
 <div class="page-header">
-  <h1><%=t '.title', :default => model_class.model_name.human.pluralize.titleize %></h1>
+  <h1>Field Data Sheets</h1>
+  <%= link_to t('.new', :default => t("helpers.links.new")),
+              new_deposit_path,
+              :class => 'btn btn-primary pull-right' %>
+  <div class="clearfix"></div>
 </div>
+
 <table class="table table-striped">
   <thead>
     <tr>
-      <th><%= model_class.human_attribute_name(:id) %></th>
+      <th><%= model_class.human_attribute_name(:collector) %></th>
       <th><%= model_class.human_attribute_name(:lot_number_id) %></th>
       <th><%= model_class.human_attribute_name(:plant_id) %></th>
       <th><%= model_class.human_attribute_name(:date) %></th>
       <th><%= model_class.human_attribute_name(:qty_bank) %></th>
       <th><%= model_class.human_attribute_name(:qty_consigned) %></th>
-      <th><%= model_class.human_attribute_name(:created_at) %></th>
       <th><%=t '.actions', :default => t("helpers.actions") %></th>
     </tr>
   </thead>
   <tbody>
     <% @deposits.each do |deposit| %>
       <tr>
-        <td><%= link_to deposit.id, deposit_path(deposit) %></td>
+        <td><%= deposit.collector.full_name %></td>
         <td><%= deposit.lot_number_id %></td>
         <td><%= deposit.plant_id %></td>
-        <td><%= deposit.date %></td>
+        <td><%= format_date deposit.date %></td>
         <td><%= deposit.qty_bank %></td>
         <td><%= deposit.qty_consigned %></td>
-        <td><%=l deposit.created_at %></td>
         <td>
           <%= link_to t('.edit', :default => t("helpers.links.edit")),
                       edit_deposit_path(deposit), :class => 'btn btn-mini btn-primary' %>
@@ -39,6 +43,4 @@
   </tbody>
 </table>
 
-<%= link_to t('.new', :default => t("helpers.links.new")),
-            new_deposit_path,
-            :class => 'btn btn-primary' %>
+<%= paginate @deposits %>
