--- a/app/views/layouts/v2/_navbar.html.erb
+++ b/app/views/layouts/v2/_navbar.html.erb
@@ -59,18 +59,23 @@
         <!-- Links -->
         <ul class="nav navbar-nav navbar-right">
 
-          <li><%= link_to "Snippets", snippets_path %></li>
-          <li><%= link_to "Plants", plants_path %></li>
-          <li><%= link_to "Lot Numbers", lot_numbers_path %></li>
-          <li><%= link_to "Orders", orders_path %></li>
-          <li><%= link_to "People", people_path %></li>
-          <!--<li><%= link_to "Transfers", transfers_path %></li>-->
-          <li><%= link_to "Deposits", deposits_path %></li>
-          <!--<li><%= link_to "Transactions", transactions_path %></li>-->
+          <li><%= link_to "Catalogue", catalogue_path %></li>
+          <% if current_user %>
+              <li><%= link_to "Snippets", snippets_path %></li>
+              <li><%= link_to "Plants", plants_path %></li>
+              <li><%= link_to "Lot Numbers", lot_numbers_path %></li>
+              <li><%= link_to "Orders", orders_path %></li>
+              <li><%= link_to "People", people_path %></li>
+              <!--<li><%= link_to "Transfers", transfers_path %></li>-->
+              <li><%= link_to "Deposits", deposits_path %></li>
+              <!--<li><%= link_to "Transactions", transactions_path %></li>-->
+              <li>
+                <a href="<%= destroy_user_session_path %>" data-method="delete"><i class="icon fa fa-sign-out"></i>Logout</a>
+              </li>
 
-          <li class="hidden-lg hidden-md">
-            <a href="<%= destroy_user_session_path %>" data-method="delete"><i class="icon fa fa-sign-out"></i>Çıkış</a>
-          </li>
+          <% else %>
+              <li><%= link_to "Sign In", new_user_session_path %></li>
+          <% end %>
         </ul>
         <!-- Links -->
 
