--- a/app/views/lot_numbers/index.html.erb
+++ b/app/views/lot_numbers/index.html.erb
@@ -1,42 +1,43 @@
 <%- model_class = LotNumber -%>
 <div class="page-header">
-  <h1><%=t '.title', :default => model_class.model_name.human.pluralize.titleize %></h1>
+  <h1><%= t '.title', :default => model_class.model_name.human.pluralize.titleize %></h1>
+  <%= link_to t('.new', :default => t("helpers.links.new")),
+              new_lot_number_path,
+              :class => 'btn btn-primary pull-right' %>
+  <div class="clearfix"></div>
 </div>
 <table class="table table-striped">
   <thead>
-    <tr>
-      <th><%= model_class.human_attribute_name(:id) %></th>
-      <th><%= model_class.human_attribute_name(:number) %></th>
-      <th><%= model_class.human_attribute_name(:region) %></th>
-      <th><%= model_class.human_attribute_name(:provenance) %></th>
-      <th><%= model_class.human_attribute_name(:location) %></th>
-      <th><%= model_class.human_attribute_name(:created_at) %></th>
-      <th><%=t '.actions', :default => t("helpers.actions") %></th>
-    </tr>
+  <tr>
+    <th><%= model_class.human_attribute_name(:id) %></th>
+    <th><%= model_class.human_attribute_name(:number) %></th>
+    <th><%= model_class.human_attribute_name(:region) %></th>
+    <th><%= model_class.human_attribute_name(:provenance) %></th>
+    <th><%= model_class.human_attribute_name(:location) %></th>
+    <th><%= t '.actions', :default => t("helpers.actions") %></th>
+  </tr>
   </thead>
   <tbody>
-    <% @lot_numbers.each do |lot_number| %>
+  <% @lot_numbers.each do |lot_number| %>
       <tr>
         <td><%= link_to lot_number.id, lot_number_path(lot_number) %></td>
         <td><%= lot_number.number %></td>
         <td><%= lot_number.region %></td>
         <td><%= lot_number.provenance %></td>
         <td><%= lot_number.location %></td>
-        <td><%=l lot_number.created_at %></td>
         <td>
           <%= link_to t('.edit', :default => t("helpers.links.edit")),
                       edit_lot_number_path(lot_number), :class => 'btn btn-mini btn-primary' %>
           <%= link_to t('.destroy', :default => t("helpers.links.destroy")),
                       lot_number_path(lot_number),
                       :method => :delete,
-                      :data => { :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure?')) },
+                      :data => {:confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure?'))},
                       :class => 'btn btn-mini btn-danger' %>
         </td>
       </tr>
-    <% end %>
+  <% end %>
   </tbody>
 </table>
 
-<%= link_to t('.new', :default => t("helpers.links.new")),
-            new_lot_number_path,
-            :class => 'btn btn-primary' %>
+<%= paginate @lot_numbers %>
+
