--- a/app/views/layouts/v2/_navbar.html.erb
+++ b/app/views/layouts/v2/_navbar.html.erb
@@ -59,6 +59,24 @@
         <!-- Links -->
         <ul class="nav navbar-nav navbar-right">
           <li><%= link_to "Catalogue", catalogue_path %></li>
+
+          <% Cms::Site.first.pages.root.children.published.each do |page| %>
+              <% if page.children.present? %>
+                  <li class="dropdown">
+                    <a href="#" class="dropdown-toggle" data-toggle="dropdown"><%= page.label %>
+                      <i class="fa fa-angle-down parent-symbol"></i></a>
+                    <ul class="dropdown-menu">
+                      <li><%= link_to page.label, page.full_path %></li>
+                      <% page.children.published.each do |cc| %>
+                          <li><%= link_to cc.label, cc.full_path %></li>
+                      <% end %>
+                    </ul>
+                  </li>
+              <% else %>
+                  <li><%= link_to page.label, page.full_path %></li>
+              <% end %>
+          <% end if Cms::Site.first.present? %>
+
           <%= render partial: "layouts/v2/#{(@current_user.role.downcase rescue "home")}/navbar" %>
         </ul>
         <!-- Links -->
