--- a/app/views/layouts/v2/admin/_navbar.html.erb
+++ b/app/views/layouts/v2/admin/_navbar.html.erb
@@ -1,12 +1,21 @@
-<li><%= link_to "Snippets", admin_snippets_path %></li>
-<li><%= link_to "Plants", admin_plants_path %></li>
-<li><%= link_to "Lot Numbers", admin_lot_numbers_path %></li>
-<li><%= link_to "Orders", admin_orders_path %></li>
-<li><%= link_to "People", admin_people_path %></li>
-<li><%= link_to "Users", admin_users_path %></li>
-<!--<li><%= link_to "Transfers", admin_transfers_path %></li>-->
-<li><%= link_to "FDs", admin_deposits_path %></li>
-<!--<li><%= link_to "Transactions", admin_transactions_path %></li>-->
-<li>
-  <a href="<%= destroy_user_session_path %>" data-method="delete"><i class="icon fa fa-sign-out"></i>Logout</a>
+<li class="dropdown">
+  <a href="#" class="dropdown-toggle" data-toggle="dropdown">Management
+    <i class="fa fa-angle-down parent-symbol"></i></a>
+  <ul class="dropdown-menu">
+    <li><%= link_to "Snippets", admin_snippets_path %></li>
+    <li><%= link_to "Plants", admin_plants_path %></li>
+    <li><%= link_to "Lot Numbers", admin_lot_numbers_path %></li>
+    <li><%= link_to "Orders", admin_orders_path %></li>
+    <li><%= link_to "People", admin_people_path %></li>
+    <li><%= link_to "Users", admin_users_path %></li>
+    <!--<li><%= link_to "Transfers", admin_transfers_path %></li>-->
+    <li><%= link_to "FDs", admin_deposits_path %></li>
+    <!--<li><%= link_to "Transactions", admin_transactions_path %></li>-->
+
+    <li><%= link_to "CMS", "/cms-admin", target: "_blank" %></li>
+
+    <li>
+      <a href="<%= destroy_user_session_path %>" data-method="delete"><i class="icon fa fa-sign-out"></i>Logout</a>
+    </li>
+  </ul>
 </li>
